final project second draft

--- a/n215final/pages/egypt.html
+++ b/n215final/pages/egypt.html
@@ -7,9 +7,9 @@
 
 <main>
   <div class="previews">
-    <img src="../img/egypt/egypt1.png" alt="Preview Israel">
-    <img src="../img/egypt/egypt2.png" alt="Preview Israel">
-    <img src="../img/egypt/egypt3.png" alt="Preview Israel">
+    <img src="img/egypt/egypt1.png" alt="Preview Israel">
+    <img src="img/egypt/egypt2.png" alt="Preview Israel">
+    <img src="img/egypt/egypt3.png" alt="Preview Israel">
   </div>
 
   <div class="dayList">
