--- a/n215final/pages/france.html
+++ b/n215final/pages/france.html
@@ -7,9 +7,9 @@
 
 <main>
   <div class="previews">
-    <img src="../img/france/france1.png" alt="Preview Israel">
-    <img src="../img/france/france2.png" alt="Preview Israel">
-    <img src="../img/france/france3.png" alt="Preview Israel">
+    <img src="img/france/france1.png" alt="Preview Israel">
+    <img src="img/france/france2.png" alt="Preview Israel">
+    <img src="img/france/france3.png" alt="Preview Israel">
   </div>
 
   <div class="dayList">
