--- a/n215final/pages/israel.html
+++ b/n215final/pages/israel.html
@@ -8,9 +8,9 @@
 
 <main>
   <div class="previews">
-    <img src="../img/israel/israel1.png" alt="Preview Israel">
-    <img src="../img/israel/israel2.png" alt="Preview Israel">
-    <img src="../img/israel/israel3.png" alt="Preview Israel">
+    <img src="img/israel/israel1.png" alt="Preview Israel">
+    <img src="img/israel/israel2.png" alt="Preview Israel">
+    <img src="img/israel/israel3.png" alt="Preview Israel">
   </div>
 
   <div class="dayList">
