--- a/n215final/pages/uae.html
+++ b/n215final/pages/uae.html
@@ -7,9 +7,9 @@
 
 <main>
   <div class="previews">
-    <img src="../img/uae/uae1.png" alt="Preview Israel">
-    <img src="../img/uae/uae2.png" alt="Preview Israel">
-    <img src="../img/uae/uae3.png" alt="Preview Israel">
+    <img src="img/uae/uae1.png" alt="Preview Israel">
+    <img src="img/uae/uae2.png" alt="Preview Israel">
+    <img src="img/uae/uae3.png" alt="Preview Israel">
   </div>
 
   <div class="dayList">
