--- a/n215final/pages/usa.html
+++ b/n215final/pages/usa.html
@@ -7,9 +7,9 @@
 
 <main>
   <div class="previews">
-    <img src="../img/usa/usa1.png" alt="Preview Israel">
-    <img src="../img/usa/usa2.png" alt="Preview Israel">
-    <img src="../img/usa/usa3.png" alt="Preview Israel">
+    <img src="img/usa/usa1.png" alt="Preview Israel">
+    <img src="img/usa/usa2.png" alt="Preview Israel">
+    <img src="img/usa/usa3.png" alt="Preview Israel">
   </div>
 
   <div class="dayList">
