--- a/n215final/pages/zealand.html
+++ b/n215final/pages/zealand.html
@@ -7,9 +7,9 @@
 
 <main>
   <div class="previews">
-    <img src="../img/nz/nz1.png" alt="Preview Israel">
-    <img src="../img/nz/nz2.png" alt="Preview Israel">
-    <img src="../img/nz/nz3.png" alt="Preview Israel">
+    <img src="img/nz/nz1.png" alt="Preview Israel">
+    <img src="img/nz/nz2.png" alt="Preview Israel">
+    <img src="img/nz/nz3.png" alt="Preview Israel">
   </div>
 
   <div class="dayList">
