--- a/n215final/index.html
+++ b/n215final/index.html
@@ -12,7 +12,7 @@
     <div class="site-wrapper">
       <header class="indexBanner" id="indexBanner">
         <div class="navHolder" id="navHolder">
-          <span class="logo">travel fly</span>
+          <img src="/img/logo-white.svg" alt="Logo" class="logo" id="logo">
           <nav>
             <a href="#home">home</a>
             <a href="#about">about</a>
@@ -35,7 +35,7 @@
 
       <footer>
         <div class="footerContainer">
-          <div class="logo">travel fly</div>
+          <img src="/img/logo-white.svg" alt="Logo" class="logo" id="logo">
           <div class="copyright">Copyright 2019 travel-fly. All rights reserved</div>
           <div class="socials">
             <div class="twitter"></div>
