--- a/n215final/pages/australia.html
+++ b/n215final/pages/australia.html
@@ -7,9 +7,9 @@
 
 <main>
   <div class="previews">
-    <img src="../img/australia/aus1.png" alt="Preview Israel">
-    <img src="../img/australia/aus2.png" alt="Preview Israel">
-    <img src="../img/australia/aus3.png" alt="Preview Israel">
+    <img src="img/australia/aus1.png" alt="Preview Israel">
+    <img src="img/australia/aus2.png" alt="Preview Israel">
+    <img src="img/australia/aus3.png" alt="Preview Israel">
   </div>
 
   <div class="dayList">
