--- a/n215final/pages/canada.html
+++ b/n215final/pages/canada.html
@@ -7,9 +7,9 @@
 
 <main>
   <div class="previews">
-    <img src="../img/canada/canada1.png" alt="Preview Israel">
-    <img src="../img/canada/canada2.png" alt="Preview Israel">
-    <img src="../img/canada/canada3.png" alt="Preview Israel">
+    <img src="img/canada/canada1.png" alt="Preview Israel">
+    <img src="img/canada/canada2.png" alt="Preview Israel">
+    <img src="img/canada/canada3.png" alt="Preview Israel">
   </div>
 
   <div class="dayList">
