--- a/n215final/pages/japan.html
+++ b/n215final/pages/japan.html
@@ -7,9 +7,9 @@
 
 <main>
   <div class="previews">
-    <img src="../img/japan/japan1.png" alt="Preview Israel">
-    <img src="../img/japan/japan2.png" alt="Preview Israel">
-    <img src="../img/japan/japan3.png" alt="Preview Israel">
+    <img src="img/japan/japan1.png" alt="Preview Israel">
+    <img src="img/japan/japan2.png" alt="Preview Israel">
+    <img src="img/japan/japan3.png" alt="Preview Israel">
   </div>
 
   <div class="dayList">
