final project final draft!

--- a/n215final/index.html
+++ b/n215final/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class="site-wrapper">
-      <header class="indexBanner" id="indexBanner">
+      <header class="indexBanner homeBanner" id="indexBanner">
         <div class="navHolder" id="navHolder">
-          <img src="/img/logo-white.svg" alt="Logo" class="logo" id="logo">
+          <img src="img/logo-white.svg" alt="Logo" class="logo" id="logo">
           <nav>
             <a href="#home">home</a>
             <a href="#about">about</a>
@@ -35,7 +35,7 @@
 
       <footer>
         <div class="footerContainer">
-          <img src="/img/logo-white.svg" alt="Logo" class="logo" id="logo">
+          <img src="img/logo-white.svg" alt="Logo" class="logo" id="logo">
           <div class="copyright">Copyright 2019 travel-fly. All rights reserved</div>
           <div class="socials">
             <div class="twitter"></div>
